--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,35 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>GE_PARSER_AUTOMATE</groupId>
-	<artifactId>GE_PARSER_AUTOMATE</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<build>
-		<sourceDirectory>src</sourceDirectory>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<configuration>
-					<release>9</release>
-				</configuration>
-				<dependencies>
-					<!-- <dependency>
-						<groupId>org.seleniumhq.selenium</groupId>
-						<artifactId>selenium-chrome-driver</artifactId>
-						<version>3.8.1</version>
-					</dependency> -->
-				</dependencies>
-			</plugin>
-		</plugins>
-	</build>
+
+
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>GE_PARSER_AUTOMATE</groupId>
+  <artifactId>GE_PARSER_AUTOMATE</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+         <dependencies>
+      <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-chrome-driver</artifactId>
+    <version>3.8.1</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.16</version>
+            </dependency>
+</dependencies>
+      </plugin>
+    </plugins>
+  </build>
+  
 </project>
